# libuv_simplify

./: CMakeLists.txt  README.md
src/: libuv_async_handle.h  libuv_base.h  libuv_handle.h  libuv_loop.h  libuv_mutex.h  libuv_tcp_handle.h  libuv_udp_handle.h
test_clients/: main.cpp
test_servers/: CMakeLists.txt  main.cpp
