cmake_minimum_required(VERSION 3.12.4)

if(NOT CMAKE_VERSION VERSION_LESS 3.0)
    cmake_policy(SET CMP0048 NEW)
endif()

STRING(REGEX REPLACE "/$" "" CURRENT_ABSOLUTE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
STRING(REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER_NAME ${CURRENT_ABSOLUTE_PATH})
STRING(TOUPPER ${CURRENT_FOLDER_NAME} CURRENT_FOLDER_UPPER_NAME)

project(${CURRENT_FOLDER_NAME} LANGUAGES CXX C)
SET(PROJECT_OUTPUT_NAME ${PROJECT_NAME})

MESSAGE(STATUS " ============ Configuring ${PROJECT_NAME} ============ ")

# ===================== set project information =========================
FILE(GLOB PROJECT_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp ${CMAKE_SOURCE_DIR}/src/*.cpp)

ADD_EXECUTABLE(${PROJECT_OUTPUT_NAME} ${PROJECT_SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_OUTPUT_NAME} libuv::uv)

INSTALL(TARGETS ${PROJECT_OUTPUT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX})
